--- a/assets/css/style.rtl.css
+++ b/assets/css/style.rtl.css
@@ -87,7 +87,7 @@ blockquote {
   }
 }
 
-@media (min-width: 1921px) {
+@media (min-width: 3841px) {
   .sidebar {
     padding-right: 17%;
     padding-left: 3%;
